--- a/src/main/resources/assets/skyland-utils/lang/en_us.json
+++ b/src/main/resources/assets/skyland-utils/lang/en_us.json
@@ -1,6 +1,6 @@
 {
-  "skyland-utils.unknown_lavalike_fluid": "unknown lava-like fluid",
-  "death.attack.lava_like": "%1$s tried to swim in %2$s",
-  "death.attack.lava_like.player": "%1$s tried to swim in %2$s to escape %3$s",
+  "skyland-utils.unknown_scalding_fluid": "unknown scalding fluid",
+  "death.attack.scalding": "%1$s tried to swim in %2$s",
+  "death.attack.scalding.player": "%1$s tried to swim in %2$s to escape %3$s",
   "block.skyland-utils.blaze_block": "Blaze Block"
 }
