--- a/src/main/resources/assets/skyland-utils/lang/en_us.json
+++ b/src/main/resources/assets/skyland-utils/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "itemGroup.skyland-utils": "Skyland Utils",
   "skyland-utils.unknown_scalding_fluid": "unknown scalding fluid",
   "death.attack.scalding": "%1$s tried to swim in %2$s",
   "death.attack.scalding.player": "%1$s tried to swim in %2$s to escape %3$s",
