--- a/src/main/resources/assets/skyland-utils/lang/en_us.json
+++ b/src/main/resources/assets/skyland-utils/lang/en_us.json
@@ -4,5 +4,20 @@
   "death.attack.scalding": "%1$s tried to swim in %2$s",
   "death.attack.scalding.player": "%1$s tried to swim in %2$s to escape %3$s",
   "block.skyland-utils.blaze_block": "Blaze Block",
-  "jei.skyland-utils.interaction.title": "Fluid Interactions"
+  "tag.fluid.minecraft.water": "Water",
+  "tag.fluid.minecraft.lava": "Lava",
+  "tag.fluid.skyland-utils.allow_swimming": "Allow Swimming",
+  "tag.fluid.skyland-utils.clear_fire": "Clear Fire",
+  "tag.fluid.skyland-utils.igniting": "Igniting",
+  "tag.fluid.skyland-utils.scalding": "Scalding",
+  "tag.fluid.skyland-utils.ultra_warm": "Ultra Warm",
+  "tag.fluid.skyland-utils.vaporizing": "Vaporizing",
+  "jei.skyland-utils.interaction.title": "Fluid Interactions",
+  "jei.skyland-utils.gui.tooltip.fluid_tag": "Fluids Tagged: %1$s",
+  "jei.skyland-utils.gui.tooltip.block_tag": "Blocks Tagged: %1$s",
+  "jei.skyland-utils.gui.tooltip.consume_fluid_source": "Consumes fluid source",
+  "jei.skyland-utils.gui.tooltip.might_consume_fluid_source": "Might consume fluid source",
+  "jei.skyland-utils.gui.tooltip.env_fluid": "Environment fluid",
+  "jei.skyland-utils.gui.tooltip.below_block": "Block below",
+  "jei.skyland-utils.gui.tooltip.env_block": "Environment block"
 }
